--- a/Capital T/nextjs-dashboard/package.json
+++ b/Capital T/nextjs-dashboard/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "vercel-build": "npm i && next dev",
     "build": "next build",
     "dev": "next dev",
     "prettier": "prettier --write --ignore-unknown .",
