--- a/Capital T/nextjs-dashboard/package.json
+++ b/Capital T/nextjs-dashboard/package.json
@@ -1,11 +1,12 @@
 {
   "private": true,
   "scripts": {
-    "vercel-build": "npm i && npm ci",
     "build": "next build",
     "dev": "next dev",
+    "lint": "next lint",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
+    "seed": "node -r dotenv/config ./scripts/seed.js",
     "start": "next start"
   },
   "dependencies": {
@@ -16,11 +17,14 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "next": "^14.0.2",
+    "next-auth": "^5.0.0-beta.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "use-debounce": "^9.0.4",
     "zod": "^3.22.2"
   },
   "devDependencies": {
@@ -32,7 +36,6 @@
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "9.0.0",
-    "next": "^14.1.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4"
   },
